--- a/SoftEnJin/01.md
+++ b/SoftEnJin/01.md
@@ -4,8 +4,8 @@
 # 소프트웨어
 ### 정의
 > 좁은 의미 : 컴퓨터 프로그램과 관련 데이터의 묶음
-넓은 의미 : 소스코드와 이에 관련된 문서까지 포함
-IEEE : 컴퓨터 프로그램, 프로시져 규칙, 관련된 문서와 데이터의 묶음
+> 넓은 의미 : 소스코드와 이에 관련된 문서까지 포함
+> IEEE : 컴퓨터 프로그램, 프로시져 규칙, 관련된 문서와 데이터의 묶음
 
 ### 중요성
 * 모든 산업의 기반기술 (사회의 많은 분야를 움직이는 원동력)
