--- a/TwoMountain/02.md
+++ b/TwoMountain/02.md
@@ -34,6 +34,7 @@
     | T | F | F | | T | F | T | | T | F | T |
     | F | T | F | | F | T | T || F | T | T |
     | F | F | F | | F | F | F || F | F | F |
+    
      ``p⊕q = (p∧~q)∨(~p∧q)`` 
 
 
@@ -53,12 +54,12 @@
 * 필요조건 / 충분조건
     > p→q 에서 p는 충분조건, q는 필요조건 
 * 쌍조건명제 (=필요충분조건)
-    > p→q도 되고 q→p도 될 때, 두 조건명제의 결합을 p↔q로 표시하고 **쌍조건명제** 라고 부름.
+    > p→q도 되고 q→p도 될 때, 두 조건명제의 결합을 p←→q로 표시하고 **쌍조건명제** 라고 부름.
     ```
     p ←→ q  ≡ (p → q)∧(q → p)
             ≡ ~(p ⊕ q)
     ```
-    | p | q | p→q | q→p| |p↔q |
+    | p | q | p→q | q→p| |p←→q |
     |:--:|:--:|:--:|:--:|:---:|:---:|
     | T | T | T | T | | T |
     | T | F | F | T | | F |
@@ -82,7 +83,7 @@
 * 교환법칙
     * p∧q ≡ q∧p
     * p∨q ≡ q∨p
-    * p↔q ≡ q↔p
+    * p←→q ≡ q←→p
 * 결합법칙
     * (p∨q)∨r = p∨(q∨r)
     * (p∧q)∧r = p∧(q∧r)
