--- a/TwoMountain/02.md
+++ b/TwoMountain/02.md
@@ -163,12 +163,12 @@
         ∴ p    
         ```
 * 부정논법
-    * 항진명제 : (~q∧(p→q)) → ~q 
+    * 항진명제 : (~q∧(p→q)) → ~p
     * 추론법칙
         ```
         ~q
         p→q
-        ∴ ~q    
+        ∴ ~p    
         ```
 * 선언적 삼단논법 또는 소거
     * 항진명제 : ((p∨q)∧~p) → q
